# Quadris

./: .gitignore  README.md
quadris_cli/: Makefile  README.md  cell.cc  cell.h  commandinterpreter.cc  commandinterpreter.h  grid.cc  grid.h  main.cc  observer.cc  observer.h  quadris.cc  quadris.h  score.cc  score.h  sequence.txt  subject.cc  subject.h
quadris_cli/blocks/: abstractblock.cc  abstractblock.h  iblock.cc  iblock.h  jblock.cc  jblock.h  lblock.cc  lblock.h  oblock.cc  oblock.h  sblock.cc  sblock.h  singleblock.cc  singleblock.h  tblock.cc  tblock.h  zblock.cc  zblock.h
quadris_cli/displays/: graphicsdisplay.cc  graphicsdisplay.h  textdisplay.cc  textdisplay.h  window.cc  window.h
quadris_cli/levels/: abstractlevel.cc  abstractlevel.h  levelfour.cc  levelfour.h  levelone.cc  levelone.h  levelthree.cc  levelthree.h  leveltwo.cc  leveltwo.h  levelzero.cc  levelzero.h
quadris_cli/tests/: 0score27.txt  1score47.txt  2score69.txt  3score93.txt  4score119.txt  absurdmultipliers.txt  bottom.txt  easyblocks.txt  hardblocks.txt  jblocks.txt  leftdrop.txt  rightdrop.txt  rightleftspin.txt  score99.txt  testlimits.txt
quadris_qt/: CMakeLists.txt  Info.plist  README.md  abstractblock.cc  abstractblock.h  abstractlevel.cc  abstractlevel.h  cell.cc  cell.h  commandinterpreter.cpp  commandinterpreter.h  grid.cc  grid.h  hint.cpp  hint.h  hintblock.cpp  hintblock.h  iblock.cc  iblock.h  jblock.cc  jblock.h  lblock.cc  lblock.h  levelfour.cc  levelfour.h  levelone.cc  levelone.h  levelthree.cc  levelthree.h  leveltwo.cc  leveltwo.h  levelzero.cc  levelzero.h  main.cc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  oblock.cc  oblock.h  (+12 more)
